Adicionado uma nova pagina -- loja silksong --

--- a/indexhome.html
+++ b/indexhome.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/stylehome.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <div class="navbar">
             <span id="nomeloja">TocaDoDog</span>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="indexhome.html">Inicio</a></li>
                 <li><a href="#">Jogos</a></li>
                 <li><a href="#">Suporte</a></li>
             </ul>
@@ -22,10 +25,11 @@
             <p id="oqe">A Toca do Dog é o lugar certo  para você comparar os preços de seus jogos favoritos nas 4 principais plataformas, assim ajudando você a economizar.</p>
         </div>
         <div class="emojis">
+            
             <img src="imgs/Design sem nome.svg" alt="emoji com mala" id="mala">
-            <img src="imgs/emojisurprise.svg" alt="emoji surpreso">
+            <img src="imgs/emojisurprise.svg" alt="emoji surpreso" id="surprise">
         </div>
-            <a href="#" id="botaoentrar">Entrar</a>
+            <a href="indexsilksong.html" id="botaoentrar">Entrar</a>
     </main>
 </body>
 </html>
