adicionei ex dos jogos restantes da pag loja.

--- a/indexsilksong.html
+++ b/indexsilksong.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/stylesilksong.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/navbar.css">
+    <title>Loja</title>
 </head>
 <body>
     <nav>
@@ -12,7 +13,7 @@
             <span id="nomeloja">TocaDoDog</span>
             <ul>
                 <li><a href="indexhome.html">Inicio</a></li>
-                <li><a href="#">Jogos</a></li>
+                <li><a href="indexloja.html">Loja</a></li>
                 <li><a href="#">Suporte</a></li>
             </ul>
         </div>
@@ -27,8 +28,8 @@
                     <span id="preco-ps">R$ 114,90</span>
                 </div>
              <div class="steam">
-                <a href=""><img src="https://cdn-1.webcatalog.io/catalog/steam-web-store/steam-web-store-icon-filled-256.webp?v=1714775986747" alt="steam-logo"> </a>
-                    <span id="preco-steam">R$ 114,90</span>
+                <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/"><img src="https://cdn-1.webcatalog.io/catalog/steam-web-store/steam-web-store-icon-filled-256.webp?v=1714775986747" alt="steam-logo"> </a>
+                    <span id="preco-steam">R$ 59,99</span>
                 </div>
         </div>
         <div class="banner-game">
