--- a/indexhome.html
+++ b/indexhome.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/stylehome.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
             <span id="nomeloja">TocaDoDog</span>
             <ul>
                 <li><a href="indexhome.html">Inicio</a></li>
-                <li><a href="#">Jogos</a></li>
+                <li><a href="indexloja.html">Loja</a></li>
                 <li><a href="#">Suporte</a></li>
             </ul>
         </div>
