--- a/indexloja.html
+++ b/indexloja.html
@@ -50,14 +50,14 @@
                     <a href="indexsilksong.html"><span>Hollow Knight: Silk Song</span></a>
                 </div>
             </div>
-            <div class="ER">
-                <div class="ER-img">
+            <div class="RDR">
+                <div class="RDR-img">
                     <a href="#">
-                        <img src="https://m.media-amazon.com/images/I/614Y4NA6CVL._UF1000,1000_QL80_.jpg" alt="">
+                        <img src="https://image.api.playstation.com/cdn/UP1004/CUSA03041_00/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.png?w=440" alt="RDR2-img">
                     </a>
                 </div>
-                <div class="ER-name">
-                    <a href="#"><span>Elden Ring</span></a>
+                <div class="RDR-name">
+                    <a href="#"><span>Red Dead Redemption 2</span></a>
                 </div>
             </div>
         </div>
