transformei o site em um pouco mais responsivo além de completar a pagina loja

--- a/indexhome.html
+++ b/indexhome.html
@@ -30,7 +30,7 @@
             <img src="imgs/Design sem nome.svg" alt="emoji com mala" id="mala">
             <img src="imgs/emojisurprise.svg" alt="emoji surpreso" id="surprise">
         </div>
-            <a href="indexsilksong.html" id="botaoentrar">Entrar</a>
-    </main>
+            <a href="indexloja.html" id="botaoentrar">Entrar</a>
+        </main>
 </body>
 </html>
