Adicionando features, trabalhando: 25%

--- a/indexhome.html
+++ b/indexhome.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,28 +10,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <script src="script/script.j" defer></script>
 </head>
+
+
 <body>
-    <nav>
-        <div class="navbar">
-            <span id="nomeloja">TocaDoDog</span>
-            <ul>
-                <li><a href="indexhome.html">Inicio</a></li>
-                <li><a href="indexloja.html">Loja</a></li>
-                <li><a href="#">Suporte</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="navbar">
+                <span id="nomeloja">TocaDoDog</span>
+                <ul>
+                    <li><a href="indexhome.html">Inicio</a></li>
+                    <li><a href="indexloja.html">Loja</a></li>
+                    <li><a href="#">Suporte</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
         <div class="text">
-            <p id="oqe">A Toca do Dog é o lugar certo  para você comparar os preços de seus jogos favoritos nas 4 principais plataformas, assim ajudando você a economizar.</p>
+            <p id="entrar">TocaDoDog</p>
         </div>
-        <div class="emojis">
-            
-            <img src="imgs/Design sem nome.svg" alt="emoji com mala" id="mala">
-            <img src="imgs/emojisurprise.svg" alt="emoji surpreso" id="surprise">
+        <div class="botao">
+            </span><a href="indexloja.html" id="botaoentrar">Entrar</a>
         </div>
-            <a href="indexloja.html" id="botaoentrar">Entrar</a>
-        </main>
+    </main>
 </body>
+
 </html>
