--- a/indexloja.html
+++ b/indexloja.html
@@ -126,11 +126,33 @@
             <div class="Game">
                 <div class="Game-img">
                     <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/No_I%27m_not_a_human_header.jpg"alt="Minecraft_capa">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/No_I%27m_not_a_human_header.jpg"alt="No_im_not_a_human_capa">
                     </a>
                 </div>
                 <div class="Game-name">
                     <a href="#"><span>No, I'm not a Human</span></a>
+                </div>
+            </div>
+            <!-- Spore -->
+            <div class="Game">
+                <div class="Game-img">
+                    <a href="#">
+                        <img src="https://upload.wikimedia.org/wikipedia/pt/3/3e/Spore_capa.jpg"alt="Spore_capa">
+                    </a>
+                </div>
+                <div class="Game-name">
+                    <a href="#"><span>Spore</span></a>
+                </div>
+            </div>
+            <!-- Phasmophobia -->
+            <div class="Game">
+                <div class="Game-img">
+                    <a href="#">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/f/f2/Phasmophobia_VG.jpg"alt="Phasmophobia_capa">
+                    </a>
+                </div>
+                <div class="Game-name">
+                    <a href="#"><span>Phasmophobia</span></a>
                 </div>
             </div>
             <!-- end-games -->
