Home finalizada, adição da logo, começar a trabalhar na pagina de jogos

--- a/indexhome.html
+++ b/indexhome.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="styles/stylehome.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-    <script src="script/script.j" defer></script>
+    <script src="script/script.js" defer></script>
 </head>
 
 
@@ -18,12 +18,17 @@
     <header>
         <nav>
             <div class="navbar">
-                <span id="nomeloja">TocaDoDog</span>
-                <ul>
-                    <li><a href="indexhome.html">Inicio</a></li>
-                    <li><a href="indexloja.html">Loja</a></li>
-                    <li><a href="#">Suporte</a></li>
-                </ul>
+                <div class="loja-about">
+                    <span id="nomeloja">TocaDoDog</span>
+                    <img src="imgs/logo.svg" alt="logo">
+                </div>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="indexhome.html">Inicio</a></li>
+                        <li><a href="indexloja.html">Jogos</a></li>
+                        <li><a href="#">Suporte</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
