--- a/indexloja.html
+++ b/indexloja.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Loja</title>
+    <title>Jogos</title>
 </head>
 <body>
     <nav>
@@ -16,7 +16,7 @@
             <span id="nomeloja">TocaDoDog</span>
             <ul>
                 <li><a href="indexhome.html">Inicio</a></li>
-                <li><a href="indexloja.html">Loja</a></li>
+                <li><a href="indexloja.html">Jogos</a></li>
                 <li><a href="#">Suporte</a></li>
             </ul>
         </div>
