iniciando page dos mapas

--- a/indexhome.html
+++ b/indexhome.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="website icon" type="svg" href="imgs/logo.svg">
     <script src="script/script.js" defer></script>
 </head>
 
@@ -37,7 +38,7 @@
             <p id="entrar">TocaDoDog</p>
         </div>
         <div class="botao">
-            </span><a href="indexloja.html" id="botaoentrar">Entrar</a>
+            <a href="indexloja.html" id="botaoentrar">Entrar</a>
         </div>
     </main>
 </body>
