adicionando os mapas na maphk

--- a/indexhkmaps.html
+++ b/indexhkmaps.html
@@ -5,20 +5,37 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/stylemapshk.css">
     <link rel="website icon" type="svg" href="imgs/logo.svg">
+    <script src="script/scriptmaphk.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="navbar">
-                <span id="nomeloja">TocaDoDog</span>
-                <ul>
-                    <li><a href="indexhome.html">Inicio</a></li>
-                    <li><a href="indexloja.html">Jogos</a></li>
-                    <li><a href="#">Suporte</a></li>
-                </ul>
+                <div class="loja-about">
+                    <span id="nomeloja">TocaDoDog</span>
+                    <img src="imgs/logo.svg" alt="logo">
+                </div>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="indexhome.html">Inicio</a></li>
+                        <li><a href="indexloja.html">Jogos</a></li>
+                        <li><a href="#">Suporte</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
+    <main>
+        <div class="maps">
+            <img  src="imgs/forgottencross.svg" alt="" id="map">
+            <div class="seta">
+                <img src="imgs/seta.svg" alt="" id="setadireita">
+            </div>
+        </div>
+        <div class="knight">
+                <img id="zz" src="imgs/knightzzz.svg" alt="">
+        </div>
+    </main>
 </body>
 </html>
