--- a/indexloja.html
+++ b/indexloja.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,39 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="website icon" type="svg" href="imgs/logo.svg">
     <title>Jogos</title>
 </head>
+
 <body>
-    <nav>
-        <div class="navbar">
-            <span id="nomeloja">TocaDoDog</span>
-            <ul>
-                <li><a href="indexhome.html">Inicio</a></li>
-                <li><a href="indexloja.html">Jogos</a></li>
-                <li><a href="#">Suporte</a></li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="navbar">
+                <div class="loja-about">
+                    <span id="nomeloja">TocaDoDog</span>
+                    <img src="imgs/logo.svg" alt="logo">
+                </div>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="indexhome.html">Inicio</a></li>
+                        <li><a href="indexloja.html">Jogos</a></li>
+                        <li><a href="#">Suporte</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <main>
         <div class="Jogos">
             <!-- Hollow Knight -->
             <div class="Game">
                 <div class="Game-img">
-                    <a href="indexhk.html"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Hollow_Knight_first_cover_art.webp/250px-Hollow_Knight_first_cover_art.webp.png" alt=""></a>
+                    <a href="indexhk.html"><img
+                            src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Hollow_Knight_first_cover_art.webp/250px-Hollow_Knight_first_cover_art.webp.png"
+                            alt=""></a>
                 </div>
                 <div class="Game-name">
                     <a href="indexsilksong.html"><span>Hollow Knight</span></a>
@@ -37,7 +50,8 @@
             <div class="Game">
                 <div class="Game-img">
                     <a href="#">
-                        <img src="https://m.media-amazon.com/images/I/614Y4NA6CVL._UF1000,1000_QL80_.jpg" alt="elden-ring-img">
+                        <img src="https://m.media-amazon.com/images/I/614Y4NA6CVL._UF1000,1000_QL80_.jpg"
+                            alt="elden-ring-img">
                     </a>
                 </div>
                 <div class="Game-name">
@@ -48,9 +62,10 @@
             <div class="Game">
                 <div class="Game-img">
                     <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Hollow_Knight_first_cover_art.webp/250px-Hollow_Knight_first_cover_art.webp.png" alt="">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Hollow_Knight_first_cover_art.webp/250px-Hollow_Knight_first_cover_art.webp.png"
+                            alt="">
                     </a>
-                    </div>
+                </div>
                 <div class="Game-name">
                     <a href="#"><span>Hollow Knight</span></a>
                 </div>
@@ -59,7 +74,8 @@
             <div class="Game">
                 <div class="Game-img">
                     <a href="#">
-                        <img src="https://image.api.playstation.com/cdn/UP1004/CUSA03041_00/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.png?w=440" alt="RDR2-img">
+                        <img src="https://image.api.playstation.com/cdn/UP1004/CUSA03041_00/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.png?w=440"
+                            alt="RDR2-img">
                     </a>
                 </div>
                 <div class="Game-name">
@@ -70,92 +86,17 @@
             <div class="Game">
                 <div class="Game-img">
                     <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/pt/7/7b/Sekiro_Shadows_Die_Twice_capa.png"alt="Sekiro_Shadows_Die_Twice_capa">
+                        <img src="https://upload.wikimedia.org/wikipedia/pt/7/7b/Sekiro_Shadows_Die_Twice_capa.png"
+                            alt="Sekiro_Shadows_Die_Twice_capa">
                     </a>
                 </div>
                 <div class="Game-name">
                     <a href="#"><span>Sekiro: Shadows Die Twice</span></a>
                 </div>
             </div>
-            <!-- Minecraft -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/pt/9/9c/Minecraft_capa.png"alt="Minecraft_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Minecraft</span></a>
-                </div>
-            </div>
-            <!-- Terraria -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/pt/e/ee/Terraria_capa.png"alt="Terraria_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Terraria</span></a>
-                </div>
-            </div>
-            <!-- Stardew Valley -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/f/fd/Logo_of_Stardew_Valley.png"alt="Stardew_Valley_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Stardew Valley</span></a>
-                </div>
-            </div>
-            <!-- Hotline Miami 2: Wrong Number -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/af/Hotline_Miami_2_cover.png/250px-Hotline_Miami_2_cover.png"alt="Hotline_Miami_2_Wrong_Number_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Hotline Miami 2</span></a>
-                </div>
-            </div>
-            <!-- No, I'm not a Human -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/No_I%27m_not_a_human_header.jpg"alt="No_im_not_a_human_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>No, I'm not a Human</span></a>
-                </div>
-            </div>
-            <!-- Spore -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/pt/3/3e/Spore_capa.jpg"alt="Spore_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Spore</span></a>
-                </div>
-            </div>
-            <!-- Phasmophobia -->
-            <div class="Game">
-                <div class="Game-img">
-                    <a href="#">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/f/f2/Phasmophobia_VG.jpg"alt="Phasmophobia_capa">
-                    </a>
-                </div>
-                <div class="Game-name">
-                    <a href="#"><span>Phasmophobia</span></a>
-                </div>
-            </div>
             <!-- end-games -->
         </div>
     </main>
 </body>
+
 </html>
