comwçando a colocar as descrições dos mapas

--- a/indexhkmaps.html
+++ b/indexhkmaps.html
@@ -30,11 +30,13 @@
         <div class="maps">
             <img  src="imgs/forgottencross.svg" alt="" id="map">
             <div class="seta">
-                <img src="imgs/seta.svg" alt="" id="setadireita">
+                <img src="imgs/setaesquerda.svg" alt="" id="setaesquerda" class="setaesquerda" onclick="imagemanterior()">
+                <img src="imgs/setadireita.svg" alt="" id="setadireita" class="setadireita" onclick="passarimagem()">
+            </div>
+            <div class="map-about">
+                <span id="text">Localizada logo abaixo da superfície, a Encruzilhada Esquecida consiste em muitas cavernas e estradas. Restos fossilizados de insetos cobrem a superfície das cavernas, com samambaias claras crescendo através de rachaduras no solo.</span>
             </div>
         </div>
-        <div class="knight">
-                <img id="zz" src="imgs/knightzzz.svg" alt="">
         </div>
     </main>
 </body>
