--- a/indexloja.html
+++ b/indexloja.html
@@ -43,7 +43,7 @@
                             alt=""></a>
                 </div>
                 <div class="Game-name">
-                    <a href="indexsilksong.html"><span>Hollow Knight</span></a>
+                    <a href="indexhk.html"><span>Hollow Knight</span></a>
                 </div>
             </div>
             <!-- Elden Ring -->
