comecando mapas elden ring

--- a/indexermaps.html
+++ b/indexermaps.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/stylemapshk.css">
     <link rel="website icon" type="svg" href="imgs/logo.svg">
-    <script src="script/scriptmaphk.js" defer></script>
-    <title>Maps - Hollow Knight</title>
+    <script src="script/scripteldenr.js" defer></script>
+    <title>Maps - Elden Ring</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -31,13 +30,12 @@
     <main>
         <div class="maps">
             <div class="map-about">
-                <span id="text">Localizada logo abaixo da superfície, a Encruzilhada Esquecida consiste em muitas
-                    cavernas e estradas. Restos fossilizados de insetos cobrem a superfície das cavernas, com samambaias
-                    claras crescendo através de rachaduras no solo.</span>
-                <span id="citacao">Ainda serpenteando por essas belas rodovias? Imagine como elas deviam ser no auge do reino, cheias de trânsito e cheias de vida! — Cornifer</span>
+                <span id="text">
+                    Limgrave é uma área exuberante e extensa da propriedade de Tenebrae. Árvores douradas, grama alta e arbustos fornecem alimento abundante para a fauna local, que inclui javalis, ovelhas, cabras e roedores, além de aves como águias e corujas. Animais selvagens mais sinistros e agressivos também existem, e aqueles que se aventurarem por lá devem estar preparados para enfrentá-los.
+                </span>
             </div>
             <div class="mapa">
-                <img src="imgs/forgottencross.svg" alt="" id="map">
+                <img src="https://img.game8.co/3912108/2b7dfcb9d8e81db68148f10a0ef8aa92.png/show" alt="" id="map">
                 <div class="seta">
                     <img src="imgs/setaesquerda.svg" alt="" id="setaesquerda" class="setaesquerda"
                         onclick="imagemanterior()">
