--- a/indexloja.html
+++ b/indexloja.html
@@ -49,13 +49,13 @@
             <!-- Elden Ring -->
             <div class="Game">
                 <div class="Game-img">
-                    <a href="#">
+                    <a href="indexer.html">
                         <img src="https://m.media-amazon.com/images/I/614Y4NA6CVL._UF1000,1000_QL80_.jpg"
                             alt="elden-ring-img">
                     </a>
                 </div>
                 <div class="Game-name">
-                    <a href="#"><span>Elden Ring</span></a>
+                    <a href="indexer.html"><span>Elden Ring</span></a>
                 </div>
             </div>
             <!-- game ai -->
