--- a/indexermaps.html
+++ b/indexermaps.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/stylemapshk.css">
+    <link rel="stylesheet" href="styles/basic.css">
+    <link rel="stylesheet" href="styles/stylemaps.css">
     <link rel="website icon" type="svg" href="imgs/logo.svg">
     <script src="script/scripteldenr.js" defer></script>
     <title>Maps - Elden Ring</title>
