--- a/indexer.html
+++ b/indexer.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/stylehk.css">
-    <link rel="stylesheet" href="styles/navbar.css">
+    <link rel="stylesheet" href="styles/stylegame.css">
+    <link rel="stylesheet" href="styles/basic.css">
     <link rel="website icon" type="svg" href="imgs/logo.svg">
     <title>Elden Ring</title>
 </head>
