concluindo site, falta ajustes

--- a/indexhome.html
+++ b/indexhome.html
@@ -26,8 +26,10 @@
                 <div class="nav-list">
                     <ul>
                         <li><a href="indexhome.html">Inicio</a></li>
-                        <li><a href="indexloja.html">Jogos</a></li>
-                        <li><a href="#">Suporte</a></li>
+                        <li><a href="indexhk.html">Game</a></li>
+                        <li><a href="indexhkmaps.html">Mapas</a></li>
+                        <li><a href="indexdev.html">Equipe</a></li>
+                        <li><a href="indexdlc.html">DLC</a></li>
                     </ul>
                 </div>
             </div>
@@ -38,7 +40,7 @@
             <p id="entrar">TocaDoDog</p>
         </div>
         <div class="botao">
-            <a href="indexloja.html" id="botaoentrar">Start</a>
+            <a href="indexhk.html" id="botaoentrar">Start</a>
         </div>
     </main>
 </body>
