--- a/indexhkmaps.html
+++ b/indexhkmaps.html
@@ -21,8 +21,10 @@
                 <div class="nav-list">
                     <ul>
                         <li><a href="indexhome.html">Inicio</a></li>
-                        <li><a href="indexloja.html">Jogos</a></li>
-                        <li><a href="#">Suporte</a></li>
+                        <li><a href="indexhk.html">Game</a></li>
+                        <li><a href="indexhkmaps.html">Mapas</a></li>
+                        <li><a href="indexdev.html">Equipe</a></li>
+                        <li><a href="indexdlc.html">DLC</a></li>
                     </ul>
                 </div>
             </div>
