terminei de colocar os personagens

--- a/indexdlc.html
+++ b/indexdlc.html
@@ -64,7 +64,7 @@
                             <span>"Ocupe seu lugar entre os deuses."</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="">
+                            <img src="https://preview.redd.it/part-65-what-are-your-thoughts-on-the-godseeker-v0-6hhxmjj8azo81.png?width=493&format=png&auto=webp&s=b2547b432f3bfe014c51254ab7f8cb3e39b554ad" alt="">
                         </div>
                     </div>
                 </div>
@@ -73,14 +73,14 @@
                             src="https://cdn2.steamgriddb.com/logo_thumb/c753a28f7391c0a9b53479292ad688a0.png" alt=""></div>
                     <div class="dlc-content">
                         <div class="about-dlc3">
-                            <span>Ecos clamam por coroas divinas,
-                                Deuses dormem em salões de ouro e pó.
-                                Louvados sejam os que buscam o impossível,
-                                Pois apenas o Vazio recordará seus nomes.</span>
-                            <span>"Ocupe seu lugar entre os deuses."</span>
+                            <span>Os sonhos retornam a Hallownest.
+                                Novos segredos surgem nas sombras.
+                                O Cavaleiro é chamado a despertar.
+                            </span>
+                            <span>"Descubra segredos adormecidos que ecoam pelos sonhos de Hallownest"</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="">
+                            <img src="https://cdn.wikimg.net/en/hkwiki/images/e/ee/Seer.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -90,13 +90,13 @@
                     <div class="dlc-content">
                         <div class="about-dlc4">
                             <span>Sob o gelo da eternidade, pulsa o azul da vida.
-                                Pura, fria e antiga — essência que desafia o fim.
+                                Pura, fria e antiga, essência que desafia o fim.
                                 O que é vivo pode sangrar,
                                 mas o que é puro jamais morre.</span>
-                            <span>"Ocupe seu lugar entre os deuses."</span>
+                            <span>"Lifeblood é o sopro azul que mantém Hallownest vivo em meio à ruína."</span>
                         </div>
                         <div class="imgs">
-                            <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="">
+                            <img src="https://cdn.wikimg.net/en/hkwiki/images/9/96/Joni.png" alt="">
                         </div>
                     </div>
                 </div>
