--- a/indexhk.html
+++ b/indexhk.html
@@ -40,6 +40,7 @@
                     <span>Desenvolvedora: <a href="indexdev.html">Team Cherry</a></span>
                     <span>Nota média: 9.1/10</span>
                     <a href="indexhkmaps.html">Mapas</a>
+                    <a href="indexdlc.html">DLCs</a>
                 </div>
             </div>
             <div class="game-introduction">
