melhorei a parte dos devs

--- a/indexdlc.html
+++ b/indexdlc.html
@@ -45,7 +45,7 @@
                                 Chamas devoram e brasas mergulham,
                                 Um acenderá a Lanterna do Pesadelo,
                                 Convocará e servirá na temida Trupe de Grimm.</span>
-                            <span class="fala">"Acenda a Lanterna do Pesadelo. Invoque a Trupe."</span>
+                            <span class="citacao1">"Acenda a Lanterna do Pesadelo. Invoque a Trupe."</span>
                         </div>
                         <div class="imgs">
                             <img src="https://tiermaker.com/images/chart/chart/hollow-knight-all-bosses-806311/43-grimmpng.png" alt="">
@@ -61,7 +61,7 @@
                                 Deuses dormem em salões de ouro e pó.
                                 Louvados sejam os que buscam o impossível,
                                 Pois apenas o Vazio recordará seus nomes.</span>
-                            <span>"Ocupe seu lugar entre os deuses."</span>
+                            <span class="citacao2">"Ocupe seu lugar entre os deuses."</span>
                         </div>
                         <div class="imgs">
                             <img src="https://preview.redd.it/part-65-what-are-your-thoughts-on-the-godseeker-v0-6hhxmjj8azo81.png?width=493&format=png&auto=webp&s=b2547b432f3bfe014c51254ab7f8cb3e39b554ad" alt="">
@@ -77,7 +77,7 @@
                                 Novos segredos surgem nas sombras.
                                 O Cavaleiro é chamado a despertar.
                             </span>
-                            <span>"Descubra segredos adormecidos que ecoam pelos sonhos de Hallownest"</span>
+                            <span class="citacao3">"Descubra segredos adormecidos que ecoam pelos sonhos de Hallownest"</span>
                         </div>
                         <div class="imgs">
                             <img src="https://cdn.wikimg.net/en/hkwiki/images/e/ee/Seer.png" alt="">
@@ -93,7 +93,7 @@
                                 Pura, fria e antiga, essência que desafia o fim.
                                 O que é vivo pode sangrar,
                                 mas o que é puro jamais morre.</span>
-                            <span>"Lifeblood é o sopro azul que mantém Hallownest vivo em meio à ruína."</span>
+                            <span class="citacao4">"Lifeblood é o sopro azul que mantém Hallownest vivo em meio à ruína."</span>
                         </div>
                         <div class="imgs">
                             <img src="https://cdn.wikimg.net/en/hkwiki/images/9/96/Joni.png" alt="">
