--- a/indexhome.html
+++ b/indexhome.html
@@ -36,11 +36,14 @@
         </nav>
     </header>
     <main>
-        <div class="text">
+        <div class="titulo">
             <p id="entrar">TocaDoDog</p>
         </div>
         <div class="botao">
             <a href="indexhk.html" id="botaoentrar">Start</a>
+        </div>
+        <div class="about">
+            <h3>Feito por: <a href="https://www.instagram.com/wilsonneto_kzx/" id="instagram">@wilsonneto_kzx</a></h3>
         </div>
     </main>
 </body>
