alteraçoes para o pages funcionar

--- a/indexdlc.html
+++ b/indexdlc.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="nav-list">
                     <ul>
-                        <li><a href="indexhome.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="indexhk.html">Game</a></li>
                         <li><a href="indexhkmaps.html">Mapas</a></li>
                         <li><a href="indexdev.html">Equipe</a></li>
